# opt-quiz

./: CMakeLists.txt  Makefile  run.sh
answer/: CMakeLists.txt
answer/bfs/: bfs_v0.cxx  bfs_v1.cxx  bfs_v2.cxx  generate.py
answer/branchless/: branch.cxx  branchless.cxx
answer/gemm/: gemm.cxx
answer/hashset/: hashset.cxx
answer/hashtable/: hashtable.cxx
answer/membw/: answer.md
answer/membw/STREAM/: Makefile  run.sh  stream.c
answer/prefix-sum/: generate.py  prefix_sum.cxx
answer/simd/: conv.cxx  median_of_seven.cxx  simd.hpp
doc/: bfs.md  brnchless.md  gemm.md  hashset.md  membw.md  simd.md
include/quiz/: base.h  static_queue.h
